Source/WebCore/accessibility/AccessibilityProgressIndicator.h
@@ -32,9 +32,7 @@ class RenderProgress;
     
 class AccessibilityProgressIndicator final : public AccessibilityRenderObject {
 public:
-    static Ref<AccessibilityProgressIndicator> create(RenderProgress*);
-    static Ref<AccessibilityProgressIndicator> create(RenderMeter*);
-    Element* element() const override;
+    static Ref<AccessibilityProgressIndicator> create(RenderObject*);
 
 private:
     AccessibilityRole roleValue() const override;
@@ -46,10 +44,8 @@ private:
     float maxValueForRange() const override;
     float minValueForRange() const override;
 
-    explicit AccessibilityProgressIndicator(RenderProgress*);
+    explicit AccessibilityProgressIndicator(RenderObject*);
     HTMLProgressElement* progressElement() const;
-
-    explicit AccessibilityProgressIndicator(RenderMeter*);
     HTMLMeterElement* meterElement() const;
     
     bool computeAccessibilityIsIgnored() const override;
